# vcrypt-rust

AEADs/: Cargo.toml
AEADs/mkv128-gcm/: CHANGELOG.md  Cargo.toml  README.md
AEADs/mkv128-gcm-siv/: CHANGELOG.md  Cargo.toml  README.md
AEADs/mkv128-gcm-siv/src/: lib.rs
AEADs/mkv128-gcm-siv/tests/: ctr_wrap.rs  mkv128128gcmsiv.rs  mkv128256gcmsiv.rs
AEADs/mkv128-gcm/src/: lib.rs
AEADs/mkv128-gcm/tests/: mkv128128gcm.rs  mkv128256gcm.rs  other_ivlen.rs
block-ciphers/: Cargo.toml
block-ciphers/mkv128/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
block-ciphers/mkv128/benches/: mod.rs
block-ciphers/mkv128/src/: consts.rs  lib.rs  mkv128-debug.rs  mkv128.rs
block-ciphers/mkv128/tests/: mod.rs
key-wraps/: Cargo.toml
key-wraps/mkv128-kw/: CHANGELOG.md  Cargo.toml  README.md
key-wraps/mkv128-kw/src/: error.rs  lib.rs
key-wraps/mkv128-kw/tests/: kw_tests.rs  kwp_tests.rs
