[package]
name = "mkv128-gcm-siv"
version = "0.11.1"
description = """
Pure Rust implementation of the MKV128-GCM-SIV Misuse-Resistant Authenticated
Encryption Cipher (RFC 8452) with optional architecture-specific
hardware acceleration
"""
authors = ["RustCrypto Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/mkv128-gcm-siv"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "mkv128", "mkv128-gcm", "encryption", "siv"]
categories = ["cryptography", "no-std"]
rust-version = "1.56"

[dependencies]
aead = { version = "0.5", default-features = false }
# mkv128 = { version = "0.8", optional = true }
mkv128 = { path = "../../block-ciphers/mkv128", optional = true}
cipher = "0.4"
ctr = "0.9"
polyval = { version = "0.6", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

[dev-dependencies]
aead = { version = "0.5", features = ["dev"], default-features = false }

[features]
default   = ["mkv128", "alloc", "getrandom"]
std       = ["aead/std", "alloc"]
alloc     = ["aead/alloc"]
arrayvec  = ["aead/arrayvec"]
getrandom = ["aead/getrandom", "rand_core"]
heapless  = ["aead/heapless"]
rand_core = ["aead/rand_core"]
stream    = ["aead/stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
