[package]
name = "mkv128"
version = "0.1.0"
description = "Pure Rust implementation of the MKV128 block cipher"
authors = ["Clink Rust Crypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/mkv128"
repository = "https://github.com/vgisclabs/vcrypt-rust/"
keywords = ["crypto", "mkv128", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
byteorder = { version = "1.1", default-features = false }
cipher = "0.4.2"

[dev-dependencies]
cipher = { version = "0.4.2", features = ["dev"] }
hex-literal = "0.3"

[features]
zeroize = ["cipher/zeroize"]
hazmat = [] # Expose cryptographically hazardous APIs

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
